<resources>
    <string name="app_name">NoteMe</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_aga">Aga</string>
    <string name="email">Email</string>
    <string name="number">Number</string>
    <string name="description">Description</string>
    <string name="hint_email_txt">Mail</string>
    <string name="hint_phone_txt">Number</string>
    <string name="hint_description_txt">Description</string>
    <string name="btn_save">Save</string>
    <string name="add_photo_txt">add photo</string>
    <string name="name">Name</string>
    <string name="hint_name_txt">Name</string>
    <string name="tv_userinfo_username_txt">User Name</string>
    <string name="tv_user_email_txt">user@email.com</string>
    <string name="tv_user_email_hint">Email:</string>
    <string name="tv_user_phone_hint">Phone number:</string>
    <string name="tv_user_phone_txt">+380000000000</string>
    <string name="tv_user_description_hint">Description:</string>
    <string name="tv_user_description_txt">bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla</string>
    <string name="Choose_theme_color">Choose theme color</string>
    <string name="title_back_press">Вы уверены, что хотите выйти?</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="NoteMe">NoteMe</string>
    <string name="text_to_one_contact">У вас пока нет контактов.</string>
    <string name="text_add_name">Добавте имя контакта.</string>
</resources>
