<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context=".project.activity.AddContactActivity">

        <FrameLayout
            android:id="@+id/frame_photo_pick"
            android:layout_width="157dp"
            android:layout_height="156dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp">

            <ImageView
                android:id="@+id/iv_photo_pick"
                android:layout_width="157dp"
                android:layout_height="156dp"
                android:layout_gravity="center_horizontal"
                android:src="@mipmap/ic_photo_camera_black_24dp" />

            <TextView
                android:id="@+id/tv_photo_pick"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|bottom"
                android:layout_marginBottom="20dp"
                android:text="@string/add_photo_txt"
                android:textColor="@color/main_color_one"
                android:textSize="15sp"
                android:textStyle="bold" />
        </FrameLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name"
            app:hintTextAppearance="@style/TextInputLayoutStyle">

            <EditText
                android:id="@+id/et_name_field"
                style="@style/EditTextStyle"
                android:inputType="textPersonName" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_email"
            app:hintTextAppearance="@style/TextInputLayoutStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email">

            <EditText
                android:id="@+id/et_email_field"
                style="@style/EditTextStyle"
                android:inputType="textEmailAddress" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_phone"
            app:hintTextAppearance="@style/TextInputLayoutStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/number">

            <EditText
                android:id="@+id/et_phone_field"
                style="@style/EditTextStyle"
                android:inputType="phone" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_description"
            app:hintTextAppearance="@style/TextInputLayoutStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/description">

            <EditText
                android:id="@+id/et_description_field"
                style="@style/EditTextStyle"
                android:layout_height="80dp"
                android:inputType="textMultiLine" />
        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <Button
                android:id="@+id/btn_contact_save"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:text="@string/btn_save" />
        </LinearLayout>


    </LinearLayout>
</ScrollView>