<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/btn_bucket"
                android:layout_width="54dp"
                android:layout_height="54dp"
                android:paddingRight="16dp"
                android:paddingBottom="16dp"
                android:background="?selectableItemBackground"
                android:src="@drawable/bucket"
                android:clickable="true"/>

            <TextView
                android:id="@+id/tv_userinfo_user_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_gravity="center"
                android:layout_marginRight="16dp"
                android:layout_toLeftOf="@+id/contact_avatar"
                android:layout_toStartOf="@+id/contact_avatar"
                android:text="@string/tv_userinfo_username_txt"
                android:textColor="@android:color/white"
                android:textSize="24sp" />

            <ImageView
                android:id="@+id/contact_avatar"
                android:layout_width="128dp"
                android:layout_height="128dp"
                android:padding="8dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:background="@color/transparent_white"
                android:src="@drawable/ninja_avatar" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/transparent_white"
                android:gravity="center"
                android:layout_marginTop="8dp"
                android:padding="8dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_user_email_hint"
                    android:textColor="@android:color/darker_gray"/>
                <TextView
                    android:id="@+id/tv_userinfo_user_email"
                    android:layout_marginTop="4dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/white"
                    android:text="@string/tv_user_email_txt"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/transparent_white"
                android:gravity="center"
                android:layout_marginTop="8dp"
                android:padding="8dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_user_phone_hint"
                    android:textColor="@android:color/darker_gray"/>
                <TextView
                    android:id="@+id/tv_userinfo_user_number"
                    android:layout_marginTop="4dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/white"
                    android:text="@string/tv_user_phone_txt"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@color/transparent_white"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="8dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_user_description_hint"
                    android:textColor="@android:color/darker_gray" />

                <TextView
                    android:id="@+id/tv_userinfo_user_description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:text="@string/tv_user_description_txt"
                    android:textColor="@android:color/white" />

            </LinearLayout>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/insta_photo"
                android:layout_gravity="center_horizontal" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>